modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/vulnerable-images/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8VulnerableImages
metadata:
  name: vulnerable-images-policy
spec:
  enforcementAction: deny
  parameters:
    # For CI/Gator tests: use inventory ExternalDataInventory mock instead of runtime external_data call.
    isTest: true
  match:
    kinds:
    - apiGroups: ["" ]
      kinds: ["Pod"]
    scope: Namespaced
