modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/vulnerable-images/rendered/constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: d8vulnerableimages
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: external-data
spec:
  crd:
    spec:
      names:
        kind: D8VulnerableImages
      validation:
        openAPIV3Schema:
          type: object
          description: >-
            Checks images against an external vulnerability provider.
          properties:
            isTest:
              type: boolean
              description: >-
                Optional test-mode flag for CI/gator tests.
                When true, policy reads mocked provider response from inventory ExternalDataInventory.
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |-
        package d8.vulnerableimages

        violation[{"msg": msg}] {
          images := [img | img = retrieve_images[_]]
          response := get_data(images)

          response_deny_request(response, input.review.operation)
          msg := "request denied by external data provider"
        }

        get_data(images) = response {
          is_test_mode
          response := external_data_from_inventory("trivy-provider", images)
        }

        get_data(images) = response {
          not is_test_mode
          response := external_data_from_inventory("trivy-provider", images)
        }

        external_data_from_inventory(provider, keys) = response {
          namespace := object.get(input.review.object.metadata, "namespace", "default")
          ns_inventory := object.get(object.get(data.inventory, "namespace", {}), namespace, {})
          api_inventory := object.get(ns_inventory, "deckhouse.io/v1alpha1", {})
          kinds_inventory := object.get(api_inventory, "ExternalDataInventory", {})
          external_inventory := object.get(kinds_inventory, "default", {})
          providers := object.get(object.get(external_inventory, "spec", {}), "providers", {})
          provider_data := object.get(providers, provider, {})

          responses_map := object.get(provider_data, "responses", {})
          responses := [[k, object.get(responses_map, k, {})] |
            k := keys[_]
          ]

          response := {
            "errors": object.get(provider_data, "errors", []),
            "system_error": object.get(provider_data, "system_error", ""),
            "responses": responses,
          }
        }

        is_test_mode {
          object.get(input.parameters, "isTest", false)
        }

        retrieve_images[imgs] {
          count(input.review.object.spec.containers[_].image) > 0
          imgs := input.review.object.spec.containers[_].image
        }

        retrieve_images[imgs] {
          count(input.review.object.spec.initContainers[_].image) > 0
          imgs := input.review.object.spec.initContainers[_].image
        }

        retrieve_images[imgs] {
          count(input.review.object.spec.template.spec.containers) > 0
          imgs := input.review.object.spec.template.spec.containers[_].image
        }

        retrieve_images[imgs] {
          count(input.review.object.spec.template.spec.initContainers) > 0
          imgs := input.review.object.spec.template.spec.initContainers[_].image
        }

        response_deny_request(response, operation) {
          not operation == "DELETE"
          count(response.errors) > 0
        }

        response_deny_request(response, operation) {
          not operation == "DELETE"
          count(response.system_error) > 0
        }
