modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/vulnerable-images/rendered/test_samples/external-data/001-allowed-external-data.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: deckhouse.io/v1alpha1
kind: ExternalDataInventory
metadata:
    name: default
    namespace: testns
spec:
    providers:
        trivy-provider:
            errors: []
            responses:
                busybox:latest:
                    vulnerabilities: []
                nginx:latest:
                    vulnerabilities: []
                registry.invalid.local/vulnerable/nginx:latest:
                    vulnerabilities: []
            system_error: ""
