modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/vulnerable-images/rendered/test_samples/pods/001-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed
    namespace: testns
spec:
    containers:
        - command:
            - ls
          image: nginx:latest
          name: nginx
