modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/vulnerable-images/rendered/test_samples/pods/004-multi-container-images.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: multi-container-images
    namespace: testns
spec:
    containers:
        - image: nginx:latest
          name: nginx
        - image: busybox:latest
          name: sidecar
